--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,18 +1,30 @@
 schema:
-  - ../*.graphql
+  - ./*.graphql
+
+resolver:
+  layout: follow-schema
+  dir: graphql
+  package: graphql
+  filename_template: "{name}.resolvers.go"
+
+exec:
+  filename: graphql/generated/generated.go
+  package: generated
 
 autobind:
-  - "github.com/keinuma/tech-story/api/domain/model"
+  - "github.com/keinuma/tech-story/domain/model"
 
 models:
   Int:
     model:
       - github.com/99designs/gqlgen/graphql.Int
+      - github.com/99designs/gqlgen/graphql.Int32
+      - github.com/99designs/gqlgen/graphql.Int64
   Story:
     model: github.com/keinuma/tech-story/domain/model.Story
-  NewStory:
-    model: github.com/keinuma/tech-story/domain/model.NewStory
   User:
     model: github.com/keinuma/tech-story/domain/model.User
+  NewStory:
+    model: github.com/keinuma/tech-story/presenter/request.NewStory
   NewUser:
-    model: github.com/keinuma/tech-story/domain/model.NewUser
+    model: github.com/keinuma/tech-story/presenter/request.NewUser
